--- a/donate.css
+++ b/donate.css
@@ -155,22 +155,44 @@ input[type=button] {
     text-align: center;
     border: none;
 }
-
-/* Banner styles */
-.banner {
-    position: relative;
-    width: 75%; 
-    display: grid;
+.content h2{
+    color: black;
+    margin-bottom: 20px;
+    margin-top: 0px;
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 32px;
+    line-height: 1.1;
 }
 
-.banner div {
-    position: relative;
-    width: 80%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+/* footer style */
+.foot{
+    background: #333;
+    height: 230px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-top: 30px;
 }
-
-.banner div img {
-    padding: 10px;
+.row1{
+    width: 50%;
+}
+.row1 p{
+    margin: 0px 0px 10px;
+    padding: 10px 0;
+    line-height: 1.5;
+    font-size: 12px;
+    color: #e6e6e6;
+}
+.row2{ 
+    height: 20px;
+    width: 50%;
+    padding: 20px 15px 0px;
+    min-height: 1px;
+    text-align: right;
+}
+.disclaimer{
+    width: 100%;
+    float: left;
+    color: white;
+    line-height: 1.5;
 }
