--- a/style.css
+++ b/style.css
@@ -3,16 +3,10 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
 }
-header{
-    height: 90vh;
-}
-
-ul{
-    list-style: none;
-}
 
 .navbar-container ul li{
     position: relative;
+    list-style: none;
 }
 
 /* utility class */
@@ -118,7 +112,7 @@ nav{
 }
 
 .slider{
-    width: 800px;
+    width: 100%;
     height: 500px;
     overflow: hidden;
 }
@@ -142,19 +136,20 @@ nav{
 }
 
 .slide img{
-    width: 800px;
+    width: 100%;
     height: 500px;
 }
 
 .navigation-manual{
     position: absolute;
-    width: 800px;
+    width: 99%;
     margin-top: -80px;
     display: flex;
     justify-content: center;
 }
 
 .manual-button1{
+
     background-color: black;
     padding: 5px;
     border-radius: 10px;
@@ -182,7 +177,196 @@ nav{
 #radio4:checked ~ .first{
     margin-left: -60%;
 }
+ /* history style */
+.history{
+    display: flex                       ;
+    width: 100%;
+    height: auto;
+    padding: 0px 7% 3%px 5%;
+    background: #fbeef0;
+    font-size: 14px;
+}
+.history div h2{
+    font-size: 35px;
+    line-height: 40px;
+    color: #f8b5c4;
+    padding-top: 40px;
+    padding-left: 25px;
+    text-transform: uppercase;
+} 
+.history div p{
+    color: #231f20;
+    font-size: 18px;
+    line-height: 1.5;
+    text-align: left;
+}
 
-.navigation-auto div{
-    border: 2px;
+/* field style */
+.fld{
+    position: relative;
+    display: block;
+    padding: 65px 5%;
+    line-height: 1.5;
+}
+.work ul li{
+    list-style: none;
+    margin: 35px;
+    position: relative;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+.select{
+    list-style: none;
+    margin: 35px;
+    position: relative;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+.edu{
+    background: #ededed;
+    margin: 0px 140px;
+    padding: 50px 70px;
+    text-align: center;
+    transition: none;
+}
+
+/* award style */
+.award{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+.awds{
+    margin-top: 50px;
+    width: 500%;
+    height: auto;
+    display: flex;
+}
+.awds input{
+    align-items: center;
+    display: none;
+    color: black;
+}
+.sld{
+    width: 20%;
+    transition: 2s;
+}
+.sld img{
+    width: 100%;
+    height: 500px;
+}
+.manual{
+    position: absolute;
+    width: 99%;
+    margin-top: -35px;
+    display: flex;
+    justify-content: center;
+}
+.mnl-btn{
+    background-color: black;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+.mnl-btn:not(:last-child){
+    margin-right: 20px;
+}
+.mnl-btn:hover{
+    background: red;
+}
+#rdo1:checked ~ .first{margin-left: 0%;}
+#rdo2:checked ~ .first{margin-left: -20%;}
+/* impact style */
+.impact{
+    display: flex;
+    width: 100%;
+    margin: 10px 0px;
+    justify-content: space-between;
+}
+.msg{
+    line-height: 1.5;
+    border-radius: 8px;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    height: 250px;
+}
+.btn button{
+    cursor: pointer;
+    margin-top: 10px;
+    width: 100%;
+    height: 65px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(255, 22, 22);
+    color: #ededed;
+    font-size: 20px;
+}
+/* footer style */
+.footer{
+    margin: 20px;
+    height: auto;
+    display: flex;
+    line-height: 1.5;
+    padding: 30px 10px;
+}
+.column{
+    background: red;
+    width: 20%;
+}
+.column img{
+    width: 250px;
+    height: auto;
+    max-width: 100%;
+    margin: 0 auto;
+}
+.social-icon{
+    list-style-type: none;
+    padding: 0;
+    overflow: hidden;
+}
+.icon{
+    list-style: none;
+    padding: 0 0;
+    margin: 0;
+    float: left;
+}
+.icon img{
+    color: white;
+    font-size: 14px;
+    display: block;
+    width: 24px;
+    padding: 9px;
+}
+.column h4{
+    color: white;
+    text-transform: uppercase;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    line-height: 1.1;
+    font-size: 20px;
+}
+.menu{
+    list-style: none;
+    color: white;
+    line-height: 1.5;
+    box-sizing: border-box;
+}
+.menu li a{
+    justify-content: left;
+    text-align: left;
+}
+.row p{
+    float: left;
+    color: #777777;
+    font-size: 15px;
+    margin: 0px 10px 10px;
+    padding-bottom: 10px;
+}
+.row p a{
+    color: #777777;
+    text-decoration: none;
 }
